# describe_df

./: Cargo.toml  LICENSE  README.md
src/: describe.rs  describe_README.md  describe_example.rs  lib.rs
