[package]
name = "describe_df"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
polars = { version = "0.51.0", features = ["lazy", "csv", "json"] }

[[bin]]
name = "describe_example"
path = "src/describe_example.rs"

[lib]
name = "describe_df"
path = "src/lib.rs"

